--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.1.3",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
@@ -30,6 +32,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "express": "^4.16.2",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
