--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:client": "cross-env NODE_DEV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "cross-env NODE_DEV=development node server/server.js",
     "clear": "rimraf dist",
-    "build": "npm run clear && npm run build:server && npm run build:client"
+    "build": "npm run clear && npm run build:server && npm run build:client",
+    "start": "cross-env NODE_DEV=producetion node server/server.js"
   },
   "author": "Lee",
   "license": "ISC",
@@ -31,12 +32,20 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
     "prop-types": "^15.6.0",
+    "query-string": "^5.1.0",
     "react": "^16.2.0",
+    "react-async-bootstrapper": "^1.1.2",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.2.2",
+    "serialize-javascript": "^1.4.0"
   }
 }
